se distribuyo el codigo que se tenia en sass

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,113 @@
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+header {
+  background-color: papayawhip;
+  position: sticky;
+  top: 0px;
+  border-bottom: solid 1px rgb(51, 51, 51);
+}
+
+nav {
+  margin: 0px 30px;
+}
+nav ul {
+  display: flex;
+  justify-content: start;
+  overflow-x: auto;
+  gap: 10px;
+  margin-top: 6px;
+}
+nav ul li {
+  font-family: "Alkalami", serif;
+  font-size: 1.25rem;
+  padding: 5px;
+}
+nav ul li a {
+  color: rgb(51, 51, 51);
+}
+
+.titulo {
+  padding-top: 5px;
+}
+
 h1 {
-  color: 0;
+  font-family: "Dancing Script", cursive;
+  font-size: 2.3rem;
+  text-align: center;
+}
+h1 a {
+  color: rgb(51, 51, 51);
+}
+
+@media (min-width: 440px) {
+  nav ul {
+    justify-content: space-evenly;
+  }
+}
+article {
+  background-color: papayawhip;
+  border: solid 2px;
+  padding: 15px 30px;
+  text-align: center;
+}
+article h2 {
+  color: rgb(51, 51, 51);
+  margin-bottom: 5px;
+}
+
+.tarjeta__img {
+  height: 250px;
+  width: 200px;
+  border: solid 1px;
+}
+
+.tarjeta__precio {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.btn {
+  color: rgb(51, 51, 51);
+  font-size: 1.25rem;
+  border: solid 2px rgb(51, 51, 51);
+  background-color: wheat;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.data {
+  font-family: "Abyssinica SIL", serif;
+  padding: 15px;
+}
+
+section {
+  background-color: rgba(51, 51, 51, 0.753);
+  margin: 20px 0px;
+}
+section h2 {
+  color: white;
+  text-align: center;
+}
+section .scroll {
+  padding: 10px;
+  display: flex;
+  overflow: auto;
+  gap: 10px;
+}
+section .scroll h2 {
+  color: rgb(51, 51, 51);
 }
 
 /*# sourceMappingURL=styles.css.map */
