--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,31 +1,22 @@
-*{
-
-
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
+.data {
+    font-family: 'Abyssinica SIL', serif;
+    padding: 15px;
 }
-ul, ol{
-    list-style: none;
-}
-a{    text-decoration: none;
-}
-
-
 section{
     background-color: rgba(51, 51, 51, 0.753);
     margin: 20px 0px;
 
-h2{
+    h2{
     color: white;
     text-align: center;
 }
-.tarjetas{
+.scroll{
     padding: 10px;
     display: flex;
     overflow: auto;
-    gap: 15px;
-}}
-
-
-
+    gap: 10px;
+    h2{
+        color: $color-primario
+    }
+}
+}
