--- a/scss/componentes/_botones.scss
+++ b/scss/componentes/_botones.scss
@@ -6,3 +6,11 @@
     padding: 5px;
     border-radius: 10px;
 }
+
+.btn-submit{
+    background-image: url(../../herramientas/img/buscar.png);
+    width: 25px;
+    background-size: 20px;
+    background-repeat: round;
+
+}
