--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,8 +4,11 @@
 
 @import "layout/header";
 
+@import "layout/main";
+
 @import "componentes/tarjetas";  
 
 @import "componentes/botones";
 
 @import "pages/index";
+
