--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,12 +2,19 @@ header {
     background-color: $color-secundario;
     position: sticky;
     top: 0px;
-    border-bottom: solid 1px rgb(51, 51, 51);
+    border-bottom: solid 1px $color-primario;
+
+    .header__top {
+        display: none;
+    }
+
+    .header__form {
+        display: none;
+    }
 }
 
 nav {
     margin: 0px 30px;
-
 
     ul {
         display: flex;
@@ -16,18 +23,18 @@ nav {
         gap: 10px;
         margin-top: 6px;
 
-
-
         li {
             font-family: 'Alkalami', serif;
             font-size: 1.25rem;
-            padding: 5px;
-
+            margin: 5px;
 
             a {
                 color: $color-primario;
-
             }
+        }
+
+        .como-comprar {
+            min-width: 145px;
         }
     }
 }
@@ -38,7 +45,7 @@ nav {
 
 h1 {
     font-family: 'Dancing Script', cursive;
-    font-size: 2.3rem;
+    font-size: 2.8rem;
     text-align: center;
 
     a {
@@ -46,9 +53,58 @@ h1 {
     }
 }
 
-
-@media(min-width: 440px){
-    nav ul{
+@media(min-width: 568px) {
+    nav ul {
         justify-content: space-evenly;
     }
+}
+
+@media(min-width: 768px) {
+    header .header__top {
+        display: block;
+        display: flex;
+        justify-content: space-around;
+        padding: 4px 0px 4px 0px;
+        border-bottom: solid 1px $color-primario;
+    }
+}
+
+@media(min-width: 1200px) {
+    .header__bottom {
+        display: grid;
+        grid-template-columns: 8, 1fr;
+        grid-template-rows: 2fr;
+
+        .titulo {
+            grid-column: 1/2;
+            grid-row: 1/3;
+        }
+
+        .header__form {
+            display: block;
+            grid-column: 7/8;
+            margin-top: 5px;
+
+            form {
+                display: inline;
+                position: relative;
+
+                input {
+                    border-radius: 5px;
+                }
+            }
+
+            .btn-submit {
+                position: absolute;
+                right: 4px;
+            }
+        }
+
+        nav {
+            grid-column: 3/8;
+            grid-row: 2/3;
+        }
+
+    }
+
 }
