--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,127 @@ h1 a {
     grid-row: 2/3;
   }
 }
+footer {
+  padding-top: 15px;
+}
+
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+.footer__info .footer__redes {
+  text-align: center;
+}
+.footer__info .footer__redes ul {
+  display: flex;
+  justify-content: space-around;
+}
+.footer__info .footer__redes p {
+  display: none;
+}
+.footer__info .footer__redes i {
+  font-size: 2.8rem;
+}
+.footer__info h3 {
+  font-size: 1.5rem;
+  font-family: "Alkalami", serif;
+}
+.footer__info li {
+  font-family: "Alkalami", serif;
+  font-size: 1.1rem;
+}
+.footer__info li a {
+  color: rgb(51, 51, 51);
+}
+
+.footer__bottom {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+}
+.footer__bottom p {
+  padding: 5px;
+  font-size: 0.75rem;
+}
+.footer__bottom p a {
+  font-weight: 800;
+  text-decoration: underline;
+}
+
+@media (min-width: 568px) {
+  .footer__info {
+    display: flex;
+    justify-content: center;
+  }
+  .footer__contacto {
+    text-align: center;
+  }
+  .footer__navegacion {
+    text-align: center;
+  }
+}
+@media (min-width: 768px) {
+  .footer__info {
+    height: 380px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  .footer__redes {
+    height: 120px;
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .footer__contacto {
+    grid-column: 1/2;
+    grid-row: 2/4;
+  }
+  .footer__contacto li {
+    font-size: 1.5rem;
+  }
+  .footer__navegacion {
+    grid-column: 2/3;
+    grid-row: 2/4;
+  }
+  .footer__navegacion li {
+    font-size: 1.5rem;
+  }
+  .footer__bottom p {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__info {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .footer__redes {
+    height: auto;
+    font-size: 1rem;
+  }
+  .footer__redes ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer__redes ul a {
+    display: flex;
+    text-align: center;
+  }
+  .footer__redes ul a .bi {
+    font-size: 1.5rem;
+  }
+  .footer__redes ul a .p-redes {
+    display: block;
+    font-size: 1.5rem;
+  }
+}
 article {
   background-color: papayawhip;
   border: solid 2px;
