--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,9 +8,13 @@
 
 @import "layout/footer";
 
+@import "layout/forms";
+
 @import "componentes/tarjetas";  
 
 @import "componentes/botones";
 
 @import "pages/index";
+
+
 
