--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,9 @@ header {
   position: sticky;
   top: 0px;
   border-bottom: solid 1px rgb(51, 51, 51);
+  z-index: 1;
 }
 header .header__top {
-  display: none;
-}
-header .header__form {
   display: none;
 }
 
@@ -83,22 +81,6 @@ h1 a {
   .header__bottom .titulo {
     grid-column: 1/2;
     grid-row: 1/3;
-  }
-  .header__bottom .header__form {
-    display: block;
-    grid-column: 7/8;
-    margin-top: 5px;
-  }
-  .header__bottom .header__form form {
-    display: inline;
-    position: relative;
-  }
-  .header__bottom .header__form form input {
-    border-radius: 5px;
-  }
-  .header__bottom .header__form .btn-submit {
-    position: absolute;
-    right: 4px;
   }
   .header__bottom nav {
     grid-column: 3/8;
@@ -206,48 +188,184 @@ footer {
     flex-direction: row;
     justify-content: space-around;
   }
-  .footer__redes {
+  .footer__info .footer__redes {
     height: auto;
     font-size: 1rem;
   }
-  .footer__redes ul {
+  .footer__info .footer__redes ul {
     display: flex;
     flex-direction: column;
   }
-  .footer__redes ul a {
+  .footer__info .footer__redes ul a {
     display: flex;
     text-align: center;
   }
-  .footer__redes ul a .bi {
+  .footer__info .footer__redes ul a .bi {
     font-size: 1.5rem;
   }
-  .footer__redes ul a .p-redes {
+  .footer__info .footer__redes ul a p {
     display: block;
     font-size: 1.5rem;
   }
 }
-article {
-  background-color: papayawhip;
-  border: solid 2px;
-  padding: 15px 30px;
-  text-align: center;
-}
-article h2 {
-  color: rgb(51, 51, 51);
-  margin-bottom: 5px;
+.header__form {
+  display: none;
 }
 
-.tarjeta__img {
-  height: 250px;
-  width: 200px;
+@media (min-width: 1200px) {
+  .header__form {
+    display: block;
+    grid-column: 7/8;
+    margin-top: 5px;
+  }
+  .header__form form {
+    display: inline;
+    position: relative;
+  }
+  .header__form form input {
+    border-radius: 5px;
+  }
+  .header__form .btn-submit {
+    position: absolute;
+    right: 4px;
+  }
+}
+article a {
+  text-decoration: none;
+  color: rgb(51, 51, 51);
+}
+article a .tarjeta {
+  background-color: papayawhip;
+  border: solid 1px;
+  width: 45vw;
+  height: auto;
+  text-align: center;
+  margin-top: 5px;
+}
+article a .tarjeta .tarjeta__img {
+  background-color: black;
+  width: 100%;
+  height: 48vw;
   border: solid 1px;
 }
-
-.tarjeta__precio {
-  font-size: 1.25rem;
+article a .tarjeta .tarjeta__img img {
+  width: 100%;
+  height: 100%;
+}
+article a .tarjeta .tarjeta__precio {
+  font-size: 1rem;
+  font-weight: 700;
   margin-bottom: 10px;
 }
+article a .tarjeta h2 {
+  font-size: 1rem;
+}
 
+.tarjeta__oferta {
+  display: grid;
+  grid-template-columns: 2, 1fr;
+  grid-template-rows: 5, 1fr;
+  width: 90vw;
+  height: 48vw;
+  align-items: center;
+  text-align: center;
+  border: solid 1px;
+  background-color: papayawhip;
+  margin: auto;
+  padding: 4px;
+}
+.tarjeta__oferta .tarjeta__oferta--img {
+  grid-column: 1/2;
+  grid-row: 1/6;
+  width: 42vw;
+  height: 45vw;
+  border: solid 1px;
+}
+.tarjeta__oferta h2 {
+  font-size: 1rem;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.tarjeta__oferta .tarjeta__precio--oferta {
+  font-size: 1rem;
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+.tarjeta__oferta .oferta__btn {
+  display: none;
+}
+
+@media (min-width: 568px) {
+  .tarjeta__oferta h2 {
+    font-size: 1.5rem;
+    grid-row: 2/3;
+  }
+  .tarjeta__oferta .tarjeta__precio--oferta {
+    font-size: 1.5rem;
+    grid-row: 3/4;
+  }
+  .tarjeta__oferta .oferta__btn {
+    display: block;
+    grid-column: 2/3;
+    grid-row: 5/6;
+    width: 80%;
+    margin: auto;
+  }
+}
+@media (min-width: 768px) {
+  .tarjeta__oferta {
+    width: 80vw;
+    height: 375px;
+  }
+  .tarjeta__oferta .tarjeta__oferta--img {
+    margin: auto;
+    width: 273px;
+    height: 320px;
+  }
+  .tarjeta__oferta h2 {
+    font-size: 2rem;
+    max-width: 500px;
+  }
+  .tarjeta__oferta .tarjeta__precio--oferta {
+    font-size: 2rem;
+  }
+  .tarjeta__oferta .oferta__btn {
+    grid-row: 4/5;
+  }
+  article a .tarjeta {
+    width: 23vw;
+  }
+  article a .tarjeta .tarjeta__img {
+    height: 27vw;
+  }
+  article a .tarjeta .tarjeta__precio {
+    font-size: 1.1rem;
+  }
+  article a .tarjeta h2 {
+    font-size: 1.1rem;
+  }
+}
+@media (min-width: 1200px) {
+  article a .tarjeta {
+    width: 275px;
+    height: 425px;
+  }
+  article a .tarjeta .tarjeta__img {
+    height: 75%;
+    width: 100%;
+  }
+  article a .tarjeta .tarjeta__precio {
+    font-size: 1.25rem;
+    font-weight: 700;
+  }
+  article a .tarjeta h2 {
+    font-size: 1.25rem;
+  }
+  article a:hover .tarjeta__img img {
+    opacity: 0.7;
+    transition-duration: 0.5s;
+  }
+}
 .btn {
   color: rgb(51, 51, 51);
   font-size: 1.25rem;
@@ -255,6 +373,11 @@ article h2 {
   background-color: wheat;
   padding: 5px;
   border-radius: 10px;
+}
+
+.btn:hover {
+  color: papayawhip;
+  background-color: rgb(51, 51, 51);
 }
 
 .btn-submit {
@@ -285,8 +408,8 @@ section h2 {
 section .scroll {
   padding: 10px;
   display: flex;
-  overflow: auto;
-  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 section .scroll h2 {
   color: rgb(51, 51, 51);
