--- a/scss/componentes/_botones.scss
+++ b/scss/componentes/_botones.scss
@@ -1,10 +1,15 @@
 .btn{
-    color: rgb(51, 51, 51);
+    color: $color-primario;
     font-size: 1.25rem;
-    border: solid 2px rgb(51, 51, 51);
+    border: solid 2px $color-primario;
     background-color: wheat;
     padding: 5px;
     border-radius: 10px;
+}
+.btn:hover{
+    color: $color-secundario;
+    background-color: $color-primario;
+
 }
 
 .btn-submit{
