--- a/scss/componentes/_tarjetas.scss
+++ b/scss/componentes/_tarjetas.scss
@@ -1,22 +1,167 @@
 article {
-    background-color: $color-secundario;
-    border: solid 2px;
-    padding: 15px 30px;
-    text-align: center;
+    a {
+        text-decoration: none;
+        color: $color-primario;
 
-    h2 {
-        color: rgb(51, 51, 51);
-        margin-bottom: 5px;
+        .tarjeta {
+            background-color: $color-secundario;
+            border: solid 1px;
+            width: 45vw;
+            height: auto;
+            text-align: center;
+            margin-top: 5px;
+
+            .tarjeta__img {
+                background-color: black;
+                width: 100%;
+                height: 48vw;
+
+                border: solid 1px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+
+            .tarjeta__precio {
+                font-size: 1rem;
+                font-weight: 700;
+                margin-bottom: 10px;
+            }
+
+            h2 {
+                font-size: 1rem;
+            }
+        }
+    }}
+
+
+
+    .tarjeta__oferta{
+        display: grid;
+        grid-template-columns: 2, 1fr;
+        grid-template-rows: 5, 1fr;
+        width: 90vw;
+        height: 48vw;
+        align-items: center;
+        text-align: center;
+        border: solid 1px;
+        background-color: $color-secundario;
+        margin: auto;
+        padding: 4px;
+        .tarjeta__oferta--img{
+            grid-column: 1/2;
+            grid-row: 1/6;
+            width: 42vw;
+            height: 45vw;
+            border: solid 1px;
+        }
+        h2{
+            font-size: 1rem;
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }
+        .tarjeta__precio--oferta{
+            font-size: 1rem;
+            grid-column: 2/3;
+            grid-row: 4/5;
+        }
+        .oferta__btn{
+            display: none;
+        }
+
+    }
+
+    @media(min-width: 568px) {
+        .tarjeta__oferta{
+            h2{
+                font-size: 1.5rem;
+                grid-row: 2/3;
+            }
+            .tarjeta__precio--oferta{
+                font-size: 1.5rem;
+                grid-row: 3/4;
+            }
+            .oferta__btn{
+                display: block;
+                grid-column: 2/3;
+                grid-row: 5/6;
+                width: 80%;
+                margin: auto;
+            }
+        }
+    }
+
+@media(min-width: 768px) {
+    .tarjeta__oferta{
+        width: 80vw;
+        height: 375px;
+        .tarjeta__oferta--img{
+            margin: auto;
+            width: 273px;
+            height: 320px;
+        }
+    h2{
+        font-size: 2rem;
+        max-width: 500px;
+    }
+    .tarjeta__precio--oferta{
+        font-size: 2rem;
+    }
+    .oferta__btn{
+        grid-row: 4/5;
+    }}
+    article {
+        a {
+            .tarjeta {
+                width: 23vw;
+
+                .tarjeta__img {
+                    height: 27vw;
+                }
+
+                .tarjeta__precio {
+                    font-size: 1.1rem;
+                }
+
+                h2 {
+                    font-size: 1.1rem;
+                }
+            }
+        }
     }
 }
 
-.tarjeta__img {
-    height: 250px;
-    width: 200px;
-    border: solid 1px;
-}
+@media(min-width: 1200px) {
+    article {
+        a {
+            .tarjeta {
+                width: 275px;
+                height: 425px;
 
-.tarjeta__precio {
-    font-size: 1.25rem;
-    margin-bottom: 10px;
+                .tarjeta__img {
+                    height: 75%;
+                    width: 100%;
+                }
+
+                .tarjeta__precio {
+                    font-size: 1.25rem;
+                    font-weight: 700;
+                }
+
+                h2 {
+                    font-size: 1.25rem;
+                }
+            }
+        }
+        a:hover{
+            .tarjeta__img{
+                img{
+
+                opacity: 0.7;
+                transition-duration: 0.5s;
+            }
+            }
+        }
+    }
 }
