--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -15,9 +15,10 @@ section{
     color: $color-primario;
     text-align: center;
 }
-.scroll{
+.galeria{
     padding: 10px;
     display: flex;
+    gap: 15px;
     flex-wrap: wrap;
     justify-content: space-evenly;
 
