--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,42 @@ footer {
     right: 4px;
   }
 }
+.form {
+  font-family: "Raleway", sans-serif;
+  color: black;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.formulario {
+  width: 50%;
+  height: auto;
+  background-color: rgba(255, 255, 255, 0.6);
+  margin: 20px;
+  padding: 10px;
+}
+
+.formulario p {
+  color: black;
+}
+
+.formulario input {
+  color: black;
+}
+
+.formulario label {
+  color: black;
+}
+
+.formulario textarea {
+  color: black;
+}
+
+.formulario__campos {
+  margin: 10px;
+}
+
 article a {
   text-decoration: none;
   color: rgb(51, 51, 51);
