--- a/css/styles.css
+++ b/css/styles.css
@@ -470,51 +470,81 @@ section .scroll h2 {
   margin: 20px 20px;
 }
 
-.form {
+.contacto {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+.contacto .form {
   color: rgb(51, 51, 51);
   width: auto;
   display: flex;
   flex-direction: column;
 }
-
-.formulario {
+.contacto .form .formulario {
   width: auto;
   height: auto;
   background-color: papayawhip;
   margin: 20px;
   padding: 10px;
 }
-
-.formulario__tipodeconsulta {
+.contacto .form .formulario__tipodeconsulta {
   display: flex;
   flex-direction: column;
 }
-
-.formulario__campos {
+.contacto .form .formulario__campos {
   margin: 10px;
 }
+.contacto .mapa {
+  margin: 20px;
+  align-items: center;
+  text-align: center;
+}
+.contacto .mapa iframe {
+  width: 85%;
+  height: 85vw;
+}
 
+@media (min-width: 768px) {
+  .contacto {
+    align-items: center;
+  }
+  .contacto .form {
+    width: 75vw;
+  }
+  .contacto .mapa iframe {
+    width: 600px;
+    height: 450px;
+  }
+  .contacto .mapa p {
+    font-size: 1.2rem;
+    padding: 15px;
+    font-weight: 600;
+  }
+}
 @media (min-width: 1200px) {
-  .form {
+  .contacto {
     display: grid;
     grid-template-columns: 2, 1fr;
     grid-template-rows: 4, 1fr;
   }
-  .form .formulario {
-    width: 47%;
+  .contacto .form {
+    width: auto;
     grid-column: 1/2;
-  }
-  .form .fomulario-radio {
     grid-row: 1/5;
   }
-  .form .fomulario-nombre {
-    grid-row: 2/5;
+  .mapa {
+    grid-column: 2/3;
+    grid-row: 1/4;
   }
-  .form .fomulario-mensaje {
-    grid-row: 3/5;
+  .mapa iframe {
+    width: 600px;
+    height: 450px;
   }
-  .form .fomulario-mail {
-    grid-row: 4/5;
+  .mapa p {
+    font-size: 1.2rem;
+    padding: 15px;
+    font-weight: 600;
   }
 }
 
