--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,9 @@
 
 @import "pages/index";
 
-@import "pages/pageone";
+@import "pages/pageproductos";
 
 @import "pages/pagecontacto";
+
+@import "pages/pagecomocomprar";
 
