--- a/scss/componentes/_tarjetas.scss
+++ b/scss/componentes/_tarjetas.scss
@@ -60,6 +60,7 @@ article {
             font-size: 1rem;
             grid-column: 2/3;
             grid-row: 2/3;
+            padding: auto;
         }
         .tarjeta__precio--oferta{
             font-size: 1rem;
